--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 /media
-migrations/
+.vscode/
+_documentation/
 
 ### Django.Python Stack ###
 # Byte-compiled / optimized / DLL files
