--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ db.sqlite3-journal
 media/
 .vscode/
 _documentation/
+htmlcov/
+*initial.py
+.coverage
 
 ### Django.Python Stack ###
 # Byte-compiled / optimized / DLL files
